--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
@@ -87,6 +87,10 @@ td {
             float: right;
         }
 
+        .right {
+            float: inherit;
+        }
+
         .margin {
             margin-right: 10px;
         }
