--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -4,9 +4,9 @@
         <div>
             <mat-form-field>
                 <mat-label>Search...</mat-label>
-                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSales()">
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button (click)="getItems()">
+            <button color="primary" class="margin" mat-raised-button (click)="getSales()">
                 Search
             </button>
             <mat-form-field class="margin">
@@ -61,13 +61,13 @@
             <ng-container matColumnDef="customer">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer </th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.customer }}
+                    {{ element.customer_name }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
-                <td mat-cell *matCellDef="let element">{{ element.amount | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.selling_price | currency: 'INR' }}</td>
             </ng-container>
 
             <ng-container matColumnDef="pd">
@@ -102,7 +102,7 @@
 
             <ng-container matColumnDef="user">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
-                <td mat-cell *matCellDef="let element">{{ element.user | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.user | currency: 'INR' }}  {{ user.user_name }}</td>
             </ng-container>
 
 
