--- a/frontend/src/app/layout/sales/sales.component.scss
+++ b/frontend/src/app/layout/sales/sales.component.scss
@@ -7,6 +7,12 @@ table {
     top: 45%;
     left: 45%;
 }
+.selectCustomerLoader {
+    position: absolute;
+    top: 0px;
+    float: right;
+    right: 18px;
+}
 
 .margin {
     margin: 0 10px 0 10px;
