--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -7,28 +7,24 @@
 <mat-divider></mat-divider>
 <div class="container">
     <br>
-    <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+    <form [formGroup]="formGroup">
         <div class="flex row-1">
             <!-- company start -->
             <div class="width">
                 <mat-form-field>
                     <mat-label>company</mat-label>
-                    <input matInput required formControlName="company" />
+                    <input matInput required formControlName="company" matTooltip="Not Editable" readonly />
                 </mat-form-field>
             </div>
             <!-- Date start -->
-            <!-- <div class="width">
+            <div class="width">
                 <mat-form-field>
-                    <input matInput [matDatepicker]="picker1" [formControl]="date1" readonly matTooltip="Not Editable"  >
+                    <input matInput [matDatepicker]="picker1" [max]="currentDate" placeholder="(MM/DD/YYYY)" required
+                        formControlName="date" readonly matTooltip="Not Editable">
                     <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                     <mat-datepicker #picker1></mat-datepicker>
                 </mat-form-field>
-            </div> -->
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Invoice No.</mat-label>
-                    <input matInput type="date" formControlName="date" required />
-                </mat-form-field>
+
             </div>
             <!-- invoice_number start -->
             <div class="width">
@@ -46,12 +42,12 @@
             </div>
             <!-- buttons start -->
             <div>
-                <button mat-raised-button color="primary" class="margin" type="submit">
+                <button mat-raised-button color="primary" class="margin">
                     Download
                 </button>
             </div>
             <div>
-                <button mat-raised-button color="primary" type="submit">
+                <button mat-raised-button color="primary" >
                     Upload
                 </button>
             </div>
@@ -60,7 +56,7 @@
     <mat-divider></mat-divider>
     <br>
     <!-- Item Name start -->
-    <form [formGroup]="addSalesFormGroup">
+    <form [formGroup]="addSalesFormGroup" (ngSubmit)="addSales()" >
         <div class="flex row-2">
             <!-- <div class="width">
                 <mat-form-field>
@@ -89,21 +85,21 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Qty</mat-label>
-                    <input matInput formControlName="qty" required (keyup)="count()" />
+                    <input matInput formControlName="qty" type="number" required (keyup)="count()" />
                 </mat-form-field>{{qty}}
             </div>
             <!-- Available start -->
             <div class="width">
                 <mat-form-field>
                     <mat-label>Available</mat-label>
-                    <input matInput formControlName="available" matTooltip="Not Editable" />
+                    <input matInput formControlName="available"type="number" matTooltip="Not Editable" />
                 </mat-form-field>
             </div>
             <!-- Selling price start -->
             <div class="width">
                 <mat-form-field>
                     <mat-label>Selling price</mat-label>
-                    <input matInput formControlName="selling_price" matTooltip="Not Editable" />
+                    <input matInput formControlName="selling_price" type="number" matTooltip="Not Editable" />
                 </mat-form-field>
             </div>
             <!-- total price start -->
@@ -111,12 +107,12 @@
 
                 <mat-form-field>
                     <mat-label>Total</mat-label>
-                    <input matInput formControlName="total" matTooltip="Not Editable" />
+                    <input matInput formControlName="total"  matTooltip="Not Editable" />
                 </mat-form-field>
             </div>
             <!-- Add button start -->
             <div>
-                <button mat-raised-button color="primary" class="margin" type="submit">
+                <button mat-raised-button color="primary"  class="margin" type="submit" (click)="addSales()">
                     Add
                 </button>
             </div>
@@ -128,11 +124,11 @@
 <br>
 <!-- table start -->
 <div class="mat-elevation-z8">
-    <table mat-table matSort matSortActive="item_name" matSortDirection="asc">
-        <ng-container matColumnDef="item_name">
+    <table mat-table matSort matSortActive="item_code"[dataSource]="salesDataSource" matSortDirection="asc">
+        <ng-container matColumnDef="item_code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.item_name}}
+                {{ element.item_code}}
             </td>
         </ng-container>
         <ng-container matColumnDef="qty">
@@ -147,10 +143,10 @@
                 {{ element.edit_delete }}
             </td>
         </ng-container>
-        <ng-container matColumnDef="price">
+        <ng-container matColumnDef="selling_price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.price}}
+                {{ element.selling_price}}
             </td>
         </ng-container>
         <ng-container matColumnDef="total">
