--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
@@ -1,180 +1,318 @@
 <div class="main-header">
-    <h1 mat-dialog-title><b> {{ !this.data ? 'Add Create Quotation' : 'Update Create Quotation' }} </b></h1>
+    <h1 mat-dialog-title><b> {{ !this.data ? 'Add Sales Quotation' : 'Update Sales Quotation' }}</b> </h1>
     <button mat-button mat-dialog-close>
         <mat-icon>close</mat-icon>
     </button>
 </div>
 <mat-divider></mat-divider>
-<div class="container">
-    <br>
-    <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-        <div class="box row-1">
-            <!-- tier start -->
-            <div class="width">
+<br>
+<form [formGroup]="formGroup">
+    <div class="item-form">
+        <div class="box">
+            <!--Item CODE start -->
+            <div class="block">
                 <mat-form-field>
-                    <mat-label>Tier</mat-label>
-                    <input matInput formControlName="tier"  required/>
+                    <mat-label>Company</mat-label>
+                    <input matInput formControlName="company"required />
                 </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+            formGroup.controls.company.touched &&
+            !formGroup.controls.company.value
+            ">
+                        <span class="error">Company is Required</span>
+                    </ng-container>
+                </div>
             </div>
-            <!-- Date start -->
-            <div class="width">
-                <mat-form-field color="accent">
+            <!--Item Name start -->
+            <div class="block">
+                <mat-form-field>
                     <mat-label>Date</mat-label>
-                    <input matInput formControlName="date" [matDatepicker]="date" required >
-                    <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
-                    <mat-datepicker #date></mat-datepicker>
+                    <input matInput formControlName="date" required type="date" />
                 </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+          formGroup.controls.date.touched &&
+          !formGroup.controls.date.value
+         ">
+                        <span class="error">date is Required</span>
+                    </ng-container>
+                </div>
             </div>
-            <!-- invoice_number start -->
-            <div class="width">
+
+
+            <!-- Init Qty start -->
+            <div class="block">
                 <mat-form-field>
-                    <mat-label>Invoice No.</mat-label>
-                    <input matInput formControlName="invoice_number" type="number" required />
+                    <mat-label>Invoice No</mat-label>
+                    <input matInput formControlName="invoice_no" type="number" required />
                 </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+                    formGroup.controls.invoice_no.touched &&
+                    !formGroup.controls.invoice_no.value
+                    ">
+                        <span class="error">Invoice No is Required</span>
+                    </ng-container>
+                </div>
             </div>
-            <!-- ref name start -->
-            <div class="width">
+            <!--SILVER  start -->
+            <div class="block">
                 <mat-form-field>
-                    <mat-label>Ref no</mat-label>
-                    <input matInput formControlName="ref_number" type="number" required />
+                    <mat-label>Ref No</mat-label>
+                    <input type="number" matInput formControlName="ref_no" required />
                 </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+          formGroup.controls.ref_no.touched &&
+          !formGroup.controls.ref_no.value
+         ">
+                        <span class="error">Ref No is Required</span>
+                    </ng-container>
+                </div>
             </div>
-            <!-- buttons start -->
-            <div>
-                <button mat-raised-button color="primary" class="margin" type="submit">
+
+
+            <div class="block">
+                <button mat-raised-button color="primary" class="margin">
                     Download
                 </button>
             </div>
-            <div>
-                <button mat-raised-button color="primary" type="submit">
+            <div class="block">
+                <button mat-raised-button color="primary" >
                     Upload
                 </button>
             </div>
         </div>
-        <mat-divider></mat-divider>
-        <br>
-        <!-- Item Name start -->
-        <div class="box row-2">
-            <div class="width">
 
-                <mat-form-field>
-                    <mat-label>Item Name</mat-label>
-                    <input matInput formControlName="item_name" required />
-                </mat-form-field>
-
-            </div>
-            <!-- Category start -->
-            <!-- <mat-form-field>
-            <mat-label>Category</mat-label>
-            <mat-select formControlName="user" name="user">
-                <mat-option *ngFor="let category of categories" [value]="category.id">
-                    {{category.code}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field> -->
-            <!-- hashtag start -->
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>#</mat-label>
-                    <input matInput formControlName="hashtag" required />
-                </mat-form-field>
-            </div>
-            <!-- Qty start -->
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Qty</mat-label>
-                    <input matInput formControlName="qty" type="number" required />
-                </mat-form-field>
-            </div>
-            <!-- Available start -->
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Available</mat-label>
-                    <input matInput formControlName="available" required />
-                </mat-form-field>
-            </div>
-
-
-            <!-- Selling price start -->
-            <div class="width">
-                <mat-form-field>
-                    <mat-label>Selling price</mat-label>
-                    <input matInput formControlName="selling_price" type="number" required />
-                </mat-form-field>
-
-            </div>
-            <!-- total price start -->
-            <div class="width">
-
-                <mat-form-field>
-                    <mat-label>Total</mat-label>
-                    <input matInput formControlName="total" required />
-                </mat-form-field>
-            </div>
-            <!-- Add button start -->
-            <div>
-
-                <button mat-raised-button color="primary" class="margin" type="submit">
-                    Add
-                </button>
-            </div>
-        </div>
-        <!-- button start -->
-
-    </form>
-</div>
-<mat-divider></mat-divider>
+    </div>
+</form>
+<mat-divider class="mat-divider"></mat-divider>
 <br>
+<!-- supplier form -->
+<h1 mat-dialog-title>Sales Quotation Details</h1>
+<form [formGroup]="formSupplier" (ngSubmit)="addSales()">
+    <div class="sales_details_table">
+        <div class="box">
+            <!-- Item Code start -->
+            <div class="block">
+                <mat-form-field class="input_width">
+                    <mat-label>Item Code</mat-label>
+                    <input matInput formControlName="item_code"
+                        required />
+                </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+                formSupplier.controls.item_code.touched &&
+                !formSupplier.controls.item_code.value
+                ">
+                        <span class="error">Item Code is Required</span>
+                    </ng-container>
+                </div>
+            </div>
 
-<!-- table start -->
-
+            <!-- qty start -->
+            <div class="block">
+                <mat-form-field class="input_width">
+                    <mat-label>Qty.</mat-label>
+                    <input matInput formControlName="qty"  type="number"
+                        required />
+                </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+                formSupplier.controls.qty.touched &&
+                !formSupplier.controls.qty.value
+                ">
+                        <span class="error">Qty is Required</span>
+                    </ng-container>
+                </div>
+            </div>
+            <!-- available start -->
+            <div class="block">
+                <mat-form-field class="input_width">
+                    <mat-label>Available</mat-label>
+                    <input matInput formControlName="available"  type="number"
+                        required />
+                </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+                formSupplier.controls.available.touched &&
+                !formSupplier.controls.available.value
+                ">
+                        <span class="error">Available is Required</span>
+                    </ng-container>
+                </div>
+            </div>
+            <!-- selling_price start -->
+            <div class="block">
+                <mat-form-field class="input_width">
+                    <mat-label>Selling Price</mat-label>
+                    <input matInput formControlName="selling_price"  type="number"
+                        required />
+                </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+                formSupplier.controls.selling_price.touched &&
+                !formSupplier.controls.selling_price.value
+                ">
+                        <span class="error">Selling Price is Required</span>
+                    </ng-container>
+                </div>
+            </div>
+            <!-- total start -->
+            <div class="block">
+                <mat-form-field class="input_width">
+                    <mat-label>Total</mat-label>
+                    <input matInput formControlName="total"  type="number"
+                        required />
+                </mat-form-field>
+                <div>
+                    <ng-container *ngIf="
+                formSupplier.controls.total.touched &&
+                !formSupplier.controls.total.value
+                ">
+                        <span class="error">Total Price is Required</span>
+                    </ng-container>
+                </div>
+            </div>
+            <!-- ADD BUTTON -->
+            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid">
+                Add
+            </button>
+        </div>
+    </div>
+</form>
+<br>
 <div class="mat-elevation-z8">
-    <table mat-table matSort matSortActive="item_name" matSortDirection="asc">
-
-        <ng-container matColumnDef="item_name">
+    <table mat-table [dataSource]="supplierDataSource" matSort matSortActive="item_code" matSortDirection="asc">
+        <ng-container matColumnDef="item_code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.item_name}}
+            <td mat-cell *matCellDef="let sales">
+                {{ sales.item_code }}
             </td>
         </ng-container>
-
         <ng-container matColumnDef="qty">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Qty</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.qty }}
+            <td mat-cell *matCellDef="let sales">
+                {{ sales.qty }}
             </td>
         </ng-container>
-
-        <ng-container matColumnDef="edit_delete">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Edit/Delete</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.edit_delete }}
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="price">
+        <ng-container matColumnDef="selling_price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.price}}
+            <td mat-cell *matCellDef="let sales">
+                {{ sales.selling_price }}
+
             </td>
         </ng-container>
-
         <ng-container matColumnDef="total">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-            <td mat-cell *matCellDef="let element">{{ element.total}}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
+            <td mat-cell *matCellDef="let sales">
+                {{ sales.total }}
+            </td>
         </ng-container>
-
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                    (click)="supplierFillForm(element.suppliers_id)">
+                    <mat-icon aria-label="Edit">edit</mat-icon>
+                </button>
+                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                    <mat-icon aria-label="Delete">delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let supplierData; columns: displayedColumns"></tr>
     </table>
-
 </div>
 <br>
-
-<div class="btn-update">
-    <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
-        <span>
-            {{ !this.data ? 'Save & Back' : 'Update' }}
+<mat-divider class="mat-divider"></mat-divider>
+<br>
+<!-- bill container -->
+<div class="bill-container">
+    <div class="flex totalAndBill">
+        <span class="totalAndBill_content-1">
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Total Qty</mat-label>
+                    <input matInput disable [(ngModel)]="totalQty" />
+                </mat-form-field>
+            </div>
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Last Bill No</mat-label>
+                    <input matInput disable [(ngModel)]="lastBillNo" />
+                </mat-form-field>
+            </div>
         </span>
+        <span class="totalAndBill_content-2">
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Total (₹)</mat-label>
+                    <input matInput disable />
+                </mat-form-field>
+            </div>
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Last Bill Due (₹)</mat-label>
+                    <input matInput disable />
+                </mat-form-field>
+            </div>
+        </span>
+    </div>
+    <mat-divider></mat-divider>
+    <br>
+    <div class="flex remakesAndPayment">
+        <div class="remakes">
+            <textarea class="padding" id="" cols="60" rows="7" placeholder="Enter Remarks..."></textarea>
+        </div>
+        <div class="payment">
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Grand Total (₹) </mat-label>
+                    <input matInput disable />
+                </mat-form-field>
+            </div>
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Payment (₹) </mat-label>
+                    <input matInput disable />
+                </mat-form-field>
+            </div>
+        </div>
+    </div>
+    <mat-divider></mat-divider>
+    <div class="flex tierLimitAndButton">
+        <div><br>(SLIVER) Due Limit: ₹100</div>
+        <div class="tierLimitAndButton_content_2">
+            <div class="right">
+                <mat-form-field>
+                    <mat-label>Total Due (₹) </mat-label>
+                    <input matInput disable />
+                </mat-form-field>
+            </div>
+            <br>
+            <div class="">
+                <button mat-raised-button color="primary" class="margin" type="submit">
+                    Save & Rack
+                </button>
+                <span>
+                    <button mat-raised-button color="warn" type="submit">
+                        Save & Print
+                    </button>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- button start -->
+<div class="btn-update">
+    <button mat-raised-button color="primary" [disabled]="!formGroup.valid || suppliers.length === 0 || isShowLoader"
+        (click)="onSubmit()">
+        <span *ngIf="!isShowLoader">
+            {{ !this.data ? 'Save' : 'Update' }}
+        </span>
+        <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
     </button>
 </div>
