--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -11,51 +11,88 @@
         padding: 0 10px;
     }
 }
-.container {
-    .mat-form-field {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
+.item-form {
     .box {
         display: flex;
-    }
 
-    .row-1 {
-        .width {
-            width: 172.5px;
-            margin-right: 20px;
+        mat-form-field {
+            margin: 0 15px 0 15px;
+            width: 159px;
         }
     }
 
-    .row-2 {
-        .width {
-            width: 128px;
-            margin-right: 20px;
+    .block {
+        display: table-caption;
+    }
+
+    .error {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+.sales_details_table {
+    .box {
+        display: flex;
+
+        mat-form-field {
+            margin: 0 15px 0 15px;
+            width: 120px;
         }
     }
 
-
-
-    .input {
-        width: 100%;
-    }
-
-    .margin {
-        margin-right: 10px;
+    .add_button {
+        height: 35px;
+        width: 90px;
+        margin-top: 10px;
     }
 }
 
 table {
     width: 100%;
-}
 
-th {
-    color: rgb(0, 0, 0);
-    font-size: 16px;
-}
+    th {
+        color: rgb(0, 0, 0);
+        font-size: 16px;
+    }
 
-td {
-    color: rgb(73 70 70 / 87%);
+    td {
+        color: rgb(73 70 70 / 87%);
+    }
+}
+.bill-container {
+    .flex {
+
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .totalAndBill {
+        margin-left: 160px;
+
+    }
+
+    .remakesAndPayment {
+        .padding {
+
+            padding: 10px 0 0 15px;
+        }
+    }
+
+    .tierLimitAndButton {
+        .tierLimitAndButton_content_2 {
+            float: right;
+        }
+
+        .right {
+            float: inherit;
+        }
+
+        .margin {
+            margin-right: 10px;
+        }
+    }
+}
+.margin {
+    margin-right: 10px;
 }
