--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -20,6 +20,7 @@
                         {{tire.code}}
                     </mat-option>
                 </mat-select>
+                <mat-spinner  class="selectTierLoader" *ngIf="selectTireLoader" diameter="25"></mat-spinner>
             </mat-form-field>
 
 
