--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.scss
@@ -26,3 +26,10 @@ th {
 td {
     color: rgb(73 70 70 / 87%);
 }
+
+.selectTierLoader {
+    position: absolute;
+    top: 0px;
+    float: right;
+    right: 18px;
+}
