--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
@@ -12,9 +12,16 @@
             <!--Item CODE start -->
             <div class="block">
                 <mat-form-field>
+
                     <mat-label>Company</mat-label>
-                    <input matInput formControlName="company"required />
-                </mat-form-field>
+                    <mat-select name="company">
+                        <mat-option formControlName="company" *ngFor="let customer of customers"  [value]="customer.id"
+                        (click)="fillDueAndDueLimit(customer)"
+                        >
+                        {{customer.company | uppercase}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
                 <div>
                     <ng-container *ngIf="
             formGroup.controls.company.touched &&
@@ -23,6 +30,7 @@
                         <span class="error">Company is Required</span>
                     </ng-container>
                 </div>
+                <mat-spinner  class="loader" *ngIf="selectCustomerLoader" diameter="25"></mat-spinner>
             </div>
             <!--Item Name start -->
             <div class="block">
@@ -91,31 +99,37 @@
 <br>
 <!-- supplier form -->
 <h1 mat-dialog-title>Sales Quotation Details</h1>
-<form [formGroup]="formSupplier" (ngSubmit)="addSales()">
+<form [formGroup]="formSupplier" (ngSubmit)="addSalesQuotation()">
     <div class="sales_details_table">
         <div class="box">
             <!-- Item Code start -->
-            <div class="block">
-                <mat-form-field class="input_width">
-                    <mat-label>Item Code</mat-label>
-                    <input matInput formControlName="item_code"
-                        required />
+
+
+             <div class="block">
+                <mat-form-field  class="input_width">
+                    <mat-label>Item code</mat-label>
+                    <mat-select name="item code">
+                        <mat-option formControlName="item_code" *ngFor="let item of items" [value]="item.id"
+                            (click)="fillSellingPrice(item)">
+                            {{item.item_code | uppercase}}
+                        </mat-option>
+                    </mat-select>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
-                formSupplier.controls.item_code.touched &&
-                !formSupplier.controls.item_code.value
-                ">
-                        <span class="error">Item Code is Required</span>
-                    </ng-container>
-                </div>
+                    formSupplier.controls.item_code.touched &&
+                    !formSupplier.controls.item_code.value
+                    ">
+                    <span class="error">Item Code is Required</span>
+                </ng-container>
             </div>
-
+            <mat-spinner  class="loader" *ngIf="selectItemLoader" diameter="20"></mat-spinner>
+            </div>
             <!-- qty start -->
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Qty.</mat-label>
-                    <input matInput formControlName="qty"  type="number" (keyup)="count()"
+                    <input matInput formControlName="qty"  type="number" (keyup)="count()" (click)="count()"
                         required />
                 </mat-form-field>
                 <div>
@@ -131,8 +145,8 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Available</mat-label>
-                    <input matInput formControlName="available"  type="number"
-                        required />
+                    <input matInput formControlName="available"  matTooltip="Not Editable" readonly
+                         />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -147,8 +161,8 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Selling Price</mat-label>
-                    <input matInput formControlName="selling_price"  type="number"
-                        required />
+                    <input matInput formControlName="selling_price"  matTooltip="Not Editable" readonly
+                        />
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -163,8 +177,8 @@
             <div class="block">
                 <mat-form-field class="input_width">
                     <mat-label>Total</mat-label>
-                    <input matInput formControlName="total"  type="number"
-                        required />
+                    <input matInput formControlName="total"
+                    matTooltip="Not Editable" readonly/>
                 </mat-form-field>
                 <div>
                     <ng-container *ngIf="
@@ -176,9 +190,10 @@
                 </div>
             </div>
             <!-- ADD BUTTON -->
-            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid" (click)="add()">
+            <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid"  (click)="add()">
                 Add
             </button>
+            <!-- [disabled]="!formSupplier.valid" -->
         </div>
     </div>
 </form>
@@ -188,7 +203,7 @@
         <ng-container matColumnDef="item_code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
             <td mat-cell *matCellDef="let sales">
-                {{ sales.item_code }}
+                {{ sales.item_code | titlecase }}
             </td>
         </ng-container>
         <ng-container matColumnDef="qty">
@@ -200,14 +215,14 @@
         <ng-container matColumnDef="selling_price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
             <td mat-cell *matCellDef="let sales">
-                {{ sales.selling_price }}
+                {{ sales.selling_price  | currency: 'INR' }}
 
             </td>
         </ng-container>
         <ng-container matColumnDef="total">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
             <td mat-cell *matCellDef="let sales">
-                {{ sales.total }}
+                {{ sales.total  | currency: 'INR'}}
             </td>
         </ng-container>
         <ng-container matColumnDef="action">
@@ -236,7 +251,7 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Total Qty</mat-label>
-                    <input matInput disable value={{this.Qty}}
+                    <input matInput disable matTooltip="Not Editable" readonly value={{this.Qty}}
                    />
                 </mat-form-field>
             </div>
@@ -251,13 +266,13 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Total (₹)</mat-label>
-                    <input matInput disable  value={{this.totalPrice}}/>
+                    <input matInput disable matTooltip="Not Editable" readonly  value = "{{this.totalPrice  | currency: 'INR'}}"/>
                 </mat-form-field>
             </div>
             <div class="width">
                 <mat-form-field>
                     <mat-label>Last Bill Due (₹)</mat-label>
-                    <input matInput disable value={{this.lastBillDue}} />
+                    <input matInput disable matTooltip="Not Editable" readonly value="{{this.lastBillDue  | currency: 'INR'}}" />
                 </mat-form-field>
             </div>
         </span>
@@ -272,35 +287,47 @@
             <div class="width">
                 <mat-form-field>
                     <mat-label>Grand Total (₹) </mat-label>
-                    <input matInput disable value={{this.grandDueTotal}} />
+                    <input matInput disable matTooltip="Not Editable" readonly value="{{this.grandDueTotal  | currency: 'INR'}}" />
                 </mat-form-field>
             </div>
             <div class="width">
                 <mat-form-field>
                     <mat-label>Payment (₹) </mat-label>
-                    <input matInput disable value={{this.currentPayment}} />
+                    <input matInput disable (keyup)="totalDueCount()" [(ngModel)]="currentPayment" value={{this.currentPayment}} />
                 </mat-form-field>
             </div>
         </div>
     </div>
     <mat-divider></mat-divider>
     <div class="flex tierLimitAndButton">
-        <div><br>(SLIVER) Due Limit: ₹100</div>
+        <div><br>(SLIVER) Due Limit:
+            <span class="error">
+                {{this.dueLimit | currency: 'INR'}}
+        </span> </div>
         <div class="tierLimitAndButton_content_2">
             <div class="right">
                 <mat-form-field>
                     <mat-label>Total Due (₹) </mat-label>
-                    <input matInput disable value={{this.totalDue}}/>
+                    <input matInput disable matTooltip="Not Editable" readonly value="{{this.totalDue | currency: 'INR'}}" />
                 </mat-form-field>
             </div>
             <br>
             <div class="">
-                <button mat-raised-button color="primary" class="margin" type="submit">
-                    Save & Rack
-                </button>
-                <span>
-                    <button mat-raised-button color="warn" type="submit">
-                        Save & Print
+
+                <button mat-raised-button color="primary" class="margin" [disabled]="formSupplier.valid || suppliers.length === 0 || isShowLoader"
+                (click)="onSubmit()">
+                <span *ngIf="!isShowLoader">
+                    {{ !this.data ? 'Save & Rack' : 'Update  & Rack' }}
+                </span>
+                <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
+            </button>
+            <span>
+                <button mat-raised-button color="warn" [disabled]="formGroup.valid || suppliers.length === 0 || isShowLoader"
+                (click)="onSubmit()">
+                    <span *ngIf="!isShowLoader">
+                        {{ !this.data ? 'Save & Print' : 'Update  & Print' }}
+                    </span>
+                    <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
                     </button>
                 </span>
             </div>
@@ -309,11 +336,5 @@
 </div>
 <!-- button start -->
 <div class="btn-update">
-    <button mat-raised-button color="primary" [disabled]="!formGroup.valid || suppliers.length === 0 || isShowLoader"
-        (click)="onSubmit()">
-        <span *ngIf="!isShowLoader">
-            {{ !this.data ? 'Save' : 'Update' }}
-        </span>
-        <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
-    </button>
+
 </div>
