--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -4,10 +4,10 @@
         <div>
             <mat-form-field>
                 <mat-label>Search...</mat-label>
-                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSalesQuotation()">
 
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button (click)="getItems()">
+            <button color="primary" class="margin" mat-raised-button (click)="getSalesQuotation()">
                 Search
             </button>
             <!-- category start -->
@@ -52,13 +52,13 @@
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date }}
+                    {{ element.date | date: 'dd/mm/yyyy' }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="remarks">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Remarks</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.remarks}}
+                    {{ element.remarks | titlecase}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="qty">
@@ -74,13 +74,13 @@
             <ng-container matColumnDef="shipping">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Shipping</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.shipping | currency: 'INR' }}
+                    {{ element.shipping}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="gst">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.gst | currency: 'INR'}}
+                    {{ element.gst }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="total_due">
@@ -89,11 +89,11 @@
             </ng-container>
             <ng-container matColumnDef="tier">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
-                <td mat-cell *matCellDef="let element">{{ element.tier | currency: 'INR'}}</td>
+                <td mat-cell *matCellDef="let element">{{ element.tier | titlecase }}</td>
             </ng-container>
             <ng-container matColumnDef="user">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
-                <td mat-cell *matCellDef="let element">{{ element.user | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.user_name | titlecase }}</td>
             </ng-container>
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
@@ -102,10 +102,10 @@
                         (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                    <!-- <button mat-icon-button matTooltip="Click to Delete" color="warn"
                         (click)="confirmDialog(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
-                    </button>
+                    </button> -->
                 </td>
             </ng-container>
             <ng-container matColumnDef="print">
