--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -2,22 +2,22 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
-            <mat-form-field>
+            <mat-form-field class="field-width">
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSuppliers()">
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button (click)="getSuppliers()">
+            <button color="primary" class="margin btn" mat-raised-button (click)="getSuppliers()">
                 Search
             </button>
-            <button color="primary" class="margin" mat-raised-button (click)="onAddNewSuppliers()">
+            <button color="primary" class="margin btn" mat-raised-button (click)="onAddNewSuppliers()">
                 Add Suppliers
             </button>
-            <button color="primary" class="margin" mat-raised-button>
-                <mat-icon>cloud_download</mat-icon>
+            <button color="primary" class="margin btn" mat-raised-button>
+                <mat-icon class="icon">cloud_download</mat-icon>
                 Download
             </button>
-            <button color="primary" class="margin" mat-raised-button>
-                <mat-icon>cloud_upload</mat-icon>
+            <button color="primary" class="margin btn" mat-raised-button>
+                <mat-icon class="icon">cloud_upload</mat-icon>
                 Upload
             </button>
         </div>
