--- a/frontend/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layout/components/sidebar/sidebar.component.scss
@@ -1,52 +1,70 @@
 #sidebar {
-  width: 250px;
-  position: fixed;
-  top: 56px;
-  bottom: 0;
-  background: #fff;
-  box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
-  z-index: 999;
-  -ms-overflow-y: auto;
-  overflow-y: auto;
-  .mat-nav-list {
-    width: 100%;
-    a {
-      .mat-icon {
-        margin-right: 15px;
-      }
-      display: block;
+    width: 200px;
+    position: fixed;
+    top: 56px;
+    bottom: 0;
+    background: #fff;
+    box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
+    z-index: 999;
+    -ms-overflow-y: auto;
+    overflow-y: auto;
+
+    .mat-nav-list {
+        width: 100%;
+
+        a {
+            height: 35px;
+            font-size: 14px;
+
+            .mat-icon {
+                margin-right: 10px;
+            }
+
+            display: block;
+        }
     }
-  }
+
+    mat-list-base,
+    mat-list-item,
+    mat-list-item-content {
+        padding: 0 10px;
+
+    }
 }
 
 .active {
-    background: #dfdfdf !important;
-  }
-.nested-menu {
-  .nested {
-    list-style-type: none;
-  }
-  .submenu {
-    display: none;
-    height: 0;
-  }
-  & .expand {
-    &.submenu {
-      display: block;
-      list-style-type: none;
-      height: auto;
-      margin: 0;
-      li {
-        a {
-          padding: 10px;
-          display: block;
-        }
-      }
-    }
-  }
+    background: #909ff4 !important;
 }
+
+.nested-menu {
+    .nested {
+        list-style-type: none;
+    }
+
+    .submenu {
+        display: none;
+        height: 0;
+    }
+
+    & .expand {
+        &.submenu {
+            display: block;
+            list-style-type: none;
+            height: auto;
+            margin: 0;
+
+            li {
+                a {
+                    padding: 10px;
+                    display: block;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 992px) {
-  #sidebar {
-    left: -250px;
-  }
+    #sidebar {
+        left: -250px;
+    }
 }
