--- a/frontend/src/app/layout/items/items.component.scss
+++ b/frontend/src/app/layout/items/items.component.scss
@@ -1,3 +1,7 @@
+* {
+    font-size: 14px;
+}
+
 table {
     width: 100%;
 }
@@ -9,20 +13,43 @@ table {
 }
 
 .margin {
-    margin: 0 10px 0 10px;
+    margin: 0 7px 0 7px;
 }
 
+.field-width {
+    width: 125px;
+    font-size: 14px;
+}
+
+.btn {
+    font-size: 13px;
+    height: 33px;
+}
+.icon{
+    vertical-align: text-top;
+}
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+tr.mat-header-row,
+tr.mat-row {
+    height: 40px;
+}
+
 th {
     color: rgb(0, 0, 0);
-    font-size: 16px;
+    font-size: 15px;
+}
+
+td.mat-cell {
+    padding: 0 5px 0 0;
+
 }
 
 td {
     color: rgb(73 70 70 / 87%);
+    font-size: 14px;
 }
