--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -2,15 +2,15 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
-            <mat-form-field>
+            <mat-form-field class="field-width">
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button (click)="getItems()">
+            <button color="primary" class="margin btn" mat-raised-button (click)="getItems()">
                 Search
             </button>
-            <button color="primary" class="margin" mat-raised-button>
-                <mat-icon>cloud_download</mat-icon>
+            <button color="primary" class="margin btn" mat-raised-button>
+                <mat-icon class="icon">cloud_download</mat-icon>
                 Download
             </button>
         </div>
@@ -21,7 +21,8 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
+            matSortDirection="asc">
             <ng-container matColumnDef="no">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No</th>
                 <td mat-cell *matCellDef="let element">
@@ -81,10 +82,12 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                        (click)="confirmDialog(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
                     </button>
                 </td>
@@ -92,15 +95,17 @@
             <ng-container matColumnDef="print">
                 <th mat-header-cell *matHeaderCellDef>Print</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button" (click)="onEditNewCustomers(element)">
-                        <mat-icon  aria-label="PRINT" color="primary">print</mat-icon>
+                    <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
+                        <mat-icon aria-label="PRINT" color="primary">print</mat-icon>
                     </button>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
