--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -2,33 +2,32 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
-            <mat-form-field>
+            <mat-form-field class="field-width">
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSalesQuotation()">
 
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button (click)="getSalesQuotation()">
+            <button color="primary" class="margin btn" mat-raised-button (click)="getSalesQuotation()">
                 Search
             </button>
             <!-- category start -->
-            <mat-form-field class="margin">
+            <mat-form-field class="margin field-width">
                 <mat-label>Select Tier</mat-label>
-                <mat-select name="tier" [(ngModel)]="tireName" >
-                    <mat-option value=""  (click)="toggleCreateButton()">All Tires</mat-option>
-                    <mat-option *ngFor="let tire of tires" [value]="tire.id"
-                        (click)="toggleCreateButton()">
+                <mat-select name="tier" [(ngModel)]="tireName">
+                    <mat-option value="" (click)="toggleCreateButton()">All Tires</mat-option>
+                    <mat-option *ngFor="let tire of tires" [value]="tire.id" (click)="toggleCreateButton()">
                         {{tire.code}}
                     </mat-option>
                 </mat-select>
-                <mat-spinner  class="selectTierLoader" *ngIf="selectTireLoader" diameter="25"></mat-spinner>
+                <mat-spinner class="selectTierLoader" *ngIf="selectTireLoader" diameter="25"></mat-spinner>
             </mat-form-field>
 
 
-            <button color="primary" class="margin" mat-raised-button>
-                <mat-icon>cloud_download</mat-icon>
+            <button color="primary" class="margin btn" mat-raised-button>
+                <mat-icon class="icon">cloud_download</mat-icon>
                 Download
             </button>
-            <button color="primary" class="margin" mat-raised-button *ngIf="!isShow"
+            <button color="primary" class="margin btn" mat-raised-button *ngIf="!isShow"
                 (click)="onAddNewCreateQuotation()">
                 Add Create Qutation
             </button>
