--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -2,32 +2,31 @@
     <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
     <div class="header">
         <div>
-            <mat-form-field>
+            <mat-form-field class="field-width">
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSales()">
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button (click)="getSales()">
+            <button color="primary" class="margin btn" mat-raised-button (click)="getSales()">
                 Search
             </button>
-            <mat-form-field class="margin">
+            <mat-form-field class="margin field-width">
                 <mat-label>Select Customer</mat-label>
-                <mat-select name="tier" [(ngModel)]="customerName" >
-                    <mat-option value=""  (click)="toggleCreateAddSalesButton()">All Customer</mat-option>
+                <mat-select name="tier" [(ngModel)]="customerName">
+                    <mat-option value="" (click)="toggleCreateAddSalesButton()">All Customer</mat-option>
                     <mat-option *ngFor="let customer of customers" [value]="customer.company"
                         (click)="toggleCreateAddSalesButton()">
                         {{customer.company | uppercase}}
                     </mat-option>
                 </mat-select>
-                <mat-spinner  class="selectCustomerLoader" *ngIf="selectCustomerLoader" diameter="25"></mat-spinner>
+                <mat-spinner class="selectCustomerLoader" *ngIf="selectCustomerLoader" diameter="25"></mat-spinner>
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button>
-                <mat-icon>cloud_download</mat-icon>
+            <button color="primary" class="margin btn" mat-raised-button>
+                <mat-icon class="icon">cloud_download</mat-icon>
                 Download
             </button>
-            <button color="primary" class="margin" mat-raised-button *ngIf="!isShow" (click)="onAddNewSales()"
-           >
-            Add New Sales
-        </button>
+            <button color="primary" class="margin" mat-raised-button *ngIf="!isShow" (click)="onAddNewSales()">
+                Add New Sales
+            </button>
         </div>
         <div>
             <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
@@ -36,7 +35,8 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
+            matSortDirection="asc">
 
             <ng-container matColumnDef="no">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No</th>
@@ -103,17 +103,19 @@
 
             <ng-container matColumnDef="user">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
-                <td mat-cell *matCellDef="let element">{{ element.user | currency: 'INR' }}  {{ user.user_name }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.user | currency: 'INR' }} {{ user.user_name }}</td>
             </ng-container>
 
 
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                        (click)="confirmDialog(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
                     </button>
                 </td>
@@ -124,8 +126,9 @@
             <ng-container matColumnDef="print">
                 <th mat-header-cell *matHeaderCellDef>Print</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button" (click)="onEditNewCustomers(element)">
-                        <mat-icon  aria-label="print" color="primary">print</mat-icon>
+                    <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
+                        <mat-icon aria-label="print" color="primary">print</mat-icon>
                     </button>
 
                 </td>
@@ -135,7 +138,8 @@
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
