--- a/frontend/src/app/layout/sales/sales.component.scss
+++ b/frontend/src/app/layout/sales/sales.component.scss
@@ -1,3 +1,7 @@
+* {
+    font-size: 14px;
+}
+
 table {
     width: 100%;
 }
@@ -7,6 +11,7 @@ table {
     top: 45%;
     left: 45%;
 }
+
 .selectCustomerLoader {
     position: absolute;
     top: 0px;
@@ -14,10 +19,23 @@ table {
     right: 18px;
 }
 
+
 .margin {
-    margin: 0 10px 0 10px;
+    margin: 0 7px 0 7px;
 }
 
+.field-width {
+    width: 125px;
+    font-size: 14px;
+}
+
+.btn {
+    font-size: 13px;
+    height: 33px;
+}
+.icon{
+    vertical-align: text-top;
+}
 .header {
     display: flex;
     align-items: center;
@@ -26,9 +44,10 @@ table {
 
 th {
     color: rgb(0, 0, 0);
-    font-size: 16px;
+    font-size: 15px;
 }
 
 td {
     color: rgb(73 70 70 / 87%);
+    font-size: 14px;
 }
